--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/ecom?user=root'
+spring.datasource.url= jdbc:mysql://root:XFZxoLIyxKshvsVzoAzqxOheNLHGiZvp@viaduct.proxy.rlwy.net:30370/railway
 spring.datasource.username=root
-spring.datasource.password=Nganhon2001@
+spring.datasource.password=XFZxoLIyxKshvsVzoAzqxOheNLHGiZvp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
